--- a/AntlrCSharp/AntlrCSharp.csproj
+++ b/AntlrCSharp/AntlrCSharp.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Antlr4.Runtime.Standard" Version="4.13.1" />
+    <PackageReference Include="LLVMSharp" Version="16.0.0" />
   </ItemGroup>
 
 </Project>
